tests/models/enum/named/string/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value {
        #[field(validate = validate_fn)]
        value: String
    },
}
fn main() {}
